--- a/languages/de.json
+++ b/languages/de.json
@@ -1,43 +1,64 @@
 {
     "binding": {
-  				"PP": "Pappband",
-  				"KT": "kartoniert",
-  				"HL": "Halbleinen",
-  				"LN": "Leinen",
-  				"CD": "CD",
-  				"GEB": "gebunden",
-  				"NON": "Nonbook",
-  				"GEH": "geheftet",
-  				"SPL": "Spiel",
-  				"CRD": "Nonbook"
+        "PP": "Pappband",
+        "KT": "kartoniert",
+        "LN": "Leinen",
+        "HL": "Halbleinen",
+        "CD": "CD",
+        "GEB": "gebunden",
+        "GEH": "geheftet",
+        "SPL": "Spiel",
+        "NON": "Nonbook",
+        "CRD": "Nonbook"
     },
     "information": {
-  			"1. Aufl.": "Erstauflage",
+        "1. Aufl.": "Erstauflage",
+        "2. Aufl.": "Zweitauflage",
         "Erstauflage 2019": "Erstauflage",
-  			"Sonderausg.": "Sonderausgabe",
-  			"Ill.": "Illustrationen",
-  			"Ktn.": "Karten",
-  			"m. Illustr.": "mit Illustrationen",
-  			"m. zahlr.": "mit zahlreichen",
-  			"m. farb. Illustr.": "mit farbigen Illustrationen",
+        "Sonderausg.": "Sonderausgabe",
+        "Ktn.": "Karten",
+        "In Box": "in einer Box",
+        "In Metall-Box": "in einer Metallbox",
+        "In Spielebox": "in einer Spielebox",
+        "In Schachtel": "in einer Schachtel",
+        "im Karton": "in einem Kartón",
+        "m. zahlr.": "mit zahlreichen",
+        "bunten Bild.": "bunten Bildern",
+        "aufklappb. Bild.": "aufklappbaren Bildern",
+        "durchg. farb.": "durchgehend farbige Illustrationen",
+        "farb. Illustrationen": "farbigen Illustrationen",
         "farb. Abb.": "farbige Abbildungen",
-  			"Farbabb.": "Farbabbildungen",
-  			"Unzerr.": "unzerreißbar",
-  			"Klapp-S.": "Klappseiten",
-  			"bunten Bild.": "bunten Bildern",
-  			"Kinder u. Jugendliche": "Kinder & Jugendliche",
-        "Für Kinder": "für Kinder",
-  			"Geblockt": "geblockt",
-  			"In Box": "in einer Box",
-  			"Schwarz-weiß illustriert": "schwarz-weiß illustriert",
-  			"s/w": "schwarz-weiß",
-  			"m. Comics": "mit Comics",
-  			"In Kassette": "in einer Kassette",
-        "JEWELCASE": "Jewelcase",
-        "Durchgehend": "durchgehend",
-        "u. ": "und ",
+        "schw.-w. Abb.": "schwarz-weiße Abbildungen",
+        "Abb.": "Abbildungen",
+        "Farbabb.": "Farbabbildungen",
+        "sw Illustrationen": "schwarz-weißen Illustrationen",
+        "sw-Illus": "schwarz-weißen Illustrationen",
+        "s/w": "schwarz-weiß",
+        "Konturgestanzt": "konturgestanzt",
+        "Klapp-S.": "Klappseiten",
+        "Illustr.": "Illustrationen",
+        "Ill.": "Illustrationen",
+        "Illustrationen Illustrationen": "Illustrationen",
+        "farb.": "farbigen",
+        "z. Tl.": "zum Teil",
+        "Unzerr.": "unzerreißbar",
+        "Formgestanzt": "formgestanzt",
         "Mit ": "mit ",
-        "In ": "in ",
-        "Min, " : "Minuten, "
+        "m. ": "mit ",
+        "Für ": "für ",
+        "Kinder u. Jugendliche": "Kinder & Jugendliche",
+        "u. ": "und ",
+        "Durchgehend": "durchgehend",
+        "In Kassette": "in einer Kassette",
+        "JEWELCASE": "Jewelcase",
+        "HALBLN": "Halbleinen",
+        "GB#21": "",
+        "Min.": "Minuten",
+        "Min, ": "Minuten, ",
+        "Komplett": "komplett",
+        "Englisch Broschur": "Englische Broschur",
+        "Gebunden": "gebunden",
+        "Schwarz": "schwarz",
+        "Geblockt": "geblockt"
     }
 }
