Updating DE translation

--- a/languages/de.json
+++ b/languages/de.json
@@ -23,6 +23,7 @@
         "In Schachtel": "in einer Schachtel",
         "im Karton": "in einem Kartón",
         "m. zahlr.": "mit zahlreichen",
+        "Zeichn v ": "Zeichnungen von ",
         "bunten Bild.": "bunten Bildern",
         "aufklappb. Bild.": "aufklappbaren Bildern",
         "durchg. farb.": "durchgehend farbige Illustrationen",
